// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack loader supports url-loader 1`] = `
"var _svg;

import * as React from \\"react\\";

var SvgIcon = function SvgIcon() {
  return _svg || (_svg = /*#__PURE__*/React.createElement(\\"svg\\", {
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export { SvgIcon as ReactComponent };
export default \\"data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iODhweCIgaGVpZ2h0PSI4OHB4IiB2aWV3Qm94PSIwIDAgODggODgiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDQ2LjIgKDQ0NDk2KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDx0aXRsZT5EaXNtaXNzPC90aXRsZT4KICAgIDxkZXNjPkNyZWF0ZWQgd2l0aCBTa2V0Y2guPC9kZXNjPgogICAgPGRlZnM+PC9kZWZzPgogICAgPGcgaWQ9IkJsb2NrcyIgc3Ryb2tlPSJub25lIiBzdHJva2Utd2lkdGg9IjEiIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCIgc3Ryb2tlLWxpbmVjYXA9InNxdWFyZSI+CiAgICAgICAgPGcgaWQ9IkRpc21pc3MiIHN0cm9rZT0iIzA2Mzg1NSIgc3Ryb2tlLXdpZHRoPSIyIj4KICAgICAgICAgICAgPHBhdGggZD0iTTUxLDM3IEwzNyw1MSIgaWQ9IlNoYXBlIj48L3BhdGg+CiAgICAgICAgICAgIDxwYXRoIGQ9Ik01MSw1MSBMMzcsMzciIGlkPSJTaGFwZSI+PC9wYXRoPgogICAgICAgIDwvZz4KICAgIDwvZz4KPC9zdmc+Cg==\\";"
`;

exports[`webpack loader transforms file (babel: false) 1`] = `
"import * as React from \\"react\\";

const SvgIcon = () => /*#__PURE__*/React.createElement(\\"svg\\", {
  width: 88,
  height: 88,
  xmlns: \\"http://www.w3.org/2000/svg\\"
}, /*#__PURE__*/React.createElement(\\"g\\", {
  stroke: \\"#063855\\",
  strokeWidth: 2,
  fill: \\"none\\",
  fillRule: \\"evenodd\\",
  strokeLinecap: \\"square\\"
}, /*#__PURE__*/React.createElement(\\"path\\", {
  d: \\"M51 37 37 51M51 51 37 37\\"
})));

export default SvgIcon;"
`;

exports[`webpack loader transforms file (typescript: true) 1`] = `
"var _g;

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

import * as React from \\"react\\";

var SvgIcon = function SvgIcon(props) {
  return /*#__PURE__*/React.createElement(\\"svg\\", _extends({
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, props), _g || (_g = /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export default SvgIcon;"
`;

exports[`webpack loader transforms file 1`] = `
"var _svg;

import * as React from \\"react\\";

var SvgIcon = function SvgIcon() {
  return _svg || (_svg = /*#__PURE__*/React.createElement(\\"svg\\", {
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export default SvgIcon;"
`;

exports[`webpack loader transforms file 2`] = `
"var _svg;

import * as React from \\"react\\";

var SvgIcon = function SvgIcon() {
  return _svg || (_svg = /*#__PURE__*/React.createElement(\\"svg\\", {
    width: 88,
    height: 88,
    xmlns: \\"http://www.w3.org/2000/svg\\"
  }, /*#__PURE__*/React.createElement(\\"g\\", {
    stroke: \\"#063855\\",
    strokeWidth: 2,
    fill: \\"none\\",
    fillRule: \\"evenodd\\",
    strokeLinecap: \\"square\\"
  }, /*#__PURE__*/React.createElement(\\"path\\", {
    d: \\"M51 37 37 51M51 51 37 37\\"
  }))));
};

export default SvgIcon;"
`;
